# fhirlesson36

./: .env  .gitignore  README.md  asgi.py  challenge1.ipynb  challenge2.ipynb  fhirrequests.http  kong-lesson36.yaml  konglog_ingest.py  konglog_ingest2.py  konglog_ingest2_backup.py  konglog_ingest2_backup2.py  konglogtest.py  kongrequests.http  pyproject.toml
